# synapse

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
docs/: CONTRIBUTING.md  DOCUMENTATION.md  GOOGLE_CALENDAR_URL.md
src/: app.html
src/auth/: firebase.js  user.js
src/components/: CardFlip.svelte  Carousel.svelte  LoginButton.svelte  LogoutText.svelte  Subscribe.svelte
src/config/: firebase.js
src/routes/: index.svelte
static/favicons/: browserconfig.xml  site.webmanifest
synapse/: cli.py
synapse/templates/: email_template.html  email_template.txt
tests/: test_cli.py
